Created GameController, corrected camera angle
Der spawnes random zombier og objecter foran spillerens synsvinkel. Har rettet synsvinklen nedad, da man kunne se for langt frem

--- a/Zombie Crasher/Assembly-CSharp.csproj
+++ b/Zombie Crasher/Assembly-CSharp.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Camera Scripts\SmoothFollow.cs" />
      <Compile Include="Assets\Scripts\Player Scripts\BaseController.cs" />
+     <Compile Include="Assets\Scripts\Helper Scripts\GameplayController.cs" />
      <Compile Include="Assets\Scripts\Player Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\Bullet Scripts\Bullet.cs" />
      <Compile Include="Assets\Scripts\Block Scripts\GroundBlock.cs" />
